js262/test/language/expressions/async-generator/early-errors-expression-formals-contains-super-property.js


/*---
author: Caitlin Potter <caitp@igalia.com>
esid: sec-async-generator-function-definitions-static-semantics-early-errors
description: >
  It is a syntax error if FormalParameters contains SuperProperty is true.
negative:
  phase: parse
  type: SyntaxError
features: [async-iteration]
---*/

$DONOTEVALUATE();

(async function*(a = super.prop) { });
